--- a/app/src/index.html
+++ b/app/src/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.scss">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1> hello wrold!</h1>
-    <script src="script.js"></script>
+    <h1>Hello World!</h1>
+    <script src="./script.js"></script>
 </body>
 </html>
