--- a/project/admin/index.html
+++ b/project/admin/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <input type="text">
+    <button> Cоздать страницу</button>
     <script src="./script.js"></script>
 </body>
 </html>
