--- a/project/index.html
+++ b/project/index.html
@@ -32,7 +32,7 @@
 					</button>
 				</div>
 			</div>		
-		<h1 class="text-center">1С в облаке №1 в России</h1>
+		<h1 class="text-center">1С в облаке №1 в Латвии</h1>
 		<h3 class="text-center">
 			Лучшая круглосуточная техподержка.<br />
 			Лучшие финансовые гарантии доступности.
