--- a/project/admin/backups/66a015f7368b7.html
+++ b/project/admin/backups/66a015f7368b7.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Halyk Kazteleport</title>
-<meta name="keywords" content="" /><meta name="description" content="" /></head>
+</head>
 <body>
 	<section class="main parallax-window" data-parallax="scroll" data-image-src="img/Block1/header_bg.png" id="main">
 		<div class="container">
